# react-native-multiple-image-picker

./: Cargo.toml  MultipleImagePicker.podspec  README.md  nitro.json  package-lock.json  package.json  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/margelo/nitro/multipleimagepicker/: CameraEngine.kt  CropEngine.kt  MultipleImagePickerImp.kt
android/src/main/java/com/margelo/nitro/multipleimagepicker/base/dialog/: BaseDialog.kt  FullDialog.kt  PermissionDialog.kt
android/src/main/java/com/margelo/nitro/multipleimagepicker/base/http/: CookieJar.kt  OkHelper.kt  (+5 more)
android/src/main/java/com/margelo/nitro/multipleimagepicker/provider/: BaseContentProvider.kt  PictureFileProvider.kt
android/src/main/java/com/margelo/nitro/multipleimagepicker/utils/: AlbumHelper.kt  BitmapHelper.kt  CacheUtils.kt  FileUtil.kt  MainThreadExecutor.kt  MetricsUtils.kt  SystemHelper.kt
android/src/main/res/layout/: picture_clip_dialog.xml  picture_editor_dialog.xml
android/src/main/res/values/: colors.xml  styles.xml
docs/: package-lock.json
docs/docs/: CAMERA.mdx  GETTING_STARTED.mdx  PREVIEW.mdx  USAGE.mdx
docs/docs/SHOWCASE/: index.mdx
example/: app.json  babel.config.js  package-lock.json  package.json
example/src/: index.tsx
example/src/components/: SectionView.tsx  View.tsx
example/src/hook/: context.ts  useTheme.ts
ios/: HybridMultipleImagePicker+Camera.swift  HybridMultipleImagePicker+Crop.swift  HybridMultipleImagePicker+Result.swift  HybridMultipleImagePicker.swift
src/: index.ts
src/types/: result.ts
(+13 files in other folders)
